syntax = "proto3";

package api.prom;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "base.proto";
import "prom/node.proto";

option go_package = "prometheus-manager/api/prom/v1;v1";
option java_multiple_files = true;
option java_package = "api.prom.v1";

service Rule {
  rpc CreateRule (CreateRuleRequest) returns (CreateRuleReply) {
    option (google.api.http) = {
      post: "/prom/v1/rule/add"
      body: "*"
    };
  }
  rpc UpdateRule (UpdateRuleRequest) returns (UpdateRuleReply) {
    option (google.api.http) = {
      put: "/prom/v1/rule/edit/{id}"
      body: "*"
    };
  }
  rpc DeleteRule (DeleteRuleRequest) returns (DeleteRuleReply) {
    option (google.api.http) = {
      delete: "/prom/v1/rule/delete/{id}"
    };
  }
  rpc GetRule (GetRuleRequest) returns (GetRuleReply) {
    option (google.api.http) = {
      get: "/prom/v1/rule/detail/{id}"
    };
  }
  rpc ListRule (ListRuleRequest) returns (ListRuleReply) {
    option (google.api.http) = {
      post: "/prom/v1/rule/list"
      body: "*"
    };
  }
}

message CreateRuleRequest {
  RuleItem rule = 1 [(validate.rules).message.required = true];
}
message CreateRuleReply {
  Response response = 1;
}

message UpdateRuleRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
  RuleItem rule = 2 [(validate.rules).message.required = true];
}
message UpdateRuleReply {
  Response response = 1;
}

message DeleteRuleRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}
message DeleteRuleReply {
  Response response = 1;
}

message GetRuleRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}
message GetRuleReply {
  RuleItem rule = 1 [(validate.rules).message.required = true];
  Response response = 2;
}

message ListRuleRequestParams {
  string keyword = 1 [(validate.rules).string.max_len = 64];
}

message ListRuleRequest {
  PageRequest page = 1 [(validate.rules).message.required = true];
  ListRuleRequestParams params = 2;
}
message ListRuleReply {
  PageReply page = 1;
  repeated RuleItem list = 2;
  Response response = 3;
}